Fix blur overflow

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -93,7 +93,7 @@
     min-width: 250px;
     min-height: 350px;
     top: 246px;
-    right: 0vw;
+    right: -25vw;;
     border-radius: 764px;
     background: rgba(25, 55, 109, 0.7);
     filter: blur(100px);
